--- a/backend/package.json
+++ b/backend/package.json
@@ -1,31 +1,43 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "npm i && npx prisma migrate dev && nodemon --watch src --ext ts --exec ts-node src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "^5.20.0",
-    "bcryptjs": "^2.4.3",
-    "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.15"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.7.5",
-    "nodemon": "^3.1.7",
-    "prisma": "^5.20.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "tsc",
+        "start": "node dist/index.js",
+        "dev": "nodemon --watch src --ext ts --exec ts-node --files src/index.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@prisma/client": "^5.20.0",
+        "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.3",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
+        "jsonwebtoken": "^9.0.2",
+        "mailgun.js": "^10.2.3",
+        "node-mailjet": "^6.0.6",
+        "nodemailer": "^6.9.15",
+        "pg": "^8.13.0",
+        "sib-api-v3-sdk": "^8.5.0",
+        "ulid": "^2.3.0",
+        "web-push": "^3.6.7"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/bcryptjs": "^2.4.6",
+        "@types/express": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/node": "^22.7.5",
+        "@types/pg": "^8.11.10",
+        "@types/web-push": "^3.6.3",
+        "nodemon": "^3.1.7",
+        "prisma": "^5.20.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.6.3"
+    }
 }
