--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,10 +1,16 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "outDir": "./dist",
-    "esModuleInterop": true,
-    "strict": true,
-    "skipLibCheck": true
-  }
+    "compilerOptions": {
+        "target": "ES6",
+        "module": "commonjs",
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "typeRoots": ["./node_modules/@types", "./src/types"],
+        "types": ["node", "express"]
+    },
+    "include": ["src/**/*.ts", "src/types/express/index.d.ts"],
+    "exclude": ["node_modules"]
 }
