--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,15 +29,15 @@ services:
     networks:
       - app-network
 
-  frontend:
-    build:
-      context: ./frontend
-    ports:
-      - "3000:3000"
-    depends_on:
-      - backend
-    networks:
-      - app-network
+  # frontend:
+  #   build:
+  #     context: ./frontend
+  #   ports:
+  #     - "3000:3000"
+  #   depends_on:
+  #     - backend
+  #   networks:
+  #     - app-network
   
 
 volumes:
