--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,18 +26,24 @@ services:
       - db
     ports:
       - "3001:3001"
+    volumes:
+      - ./backend:/usr/src/app  # Mount backend source code for HMR
+      - /usr/src/app/node_modules  # Exclude node_modules to avoid issues with host dependencies
     networks:
       - app-network
 
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #   ports:
-  #     - "3000:3000"
-  #   depends_on:
-  #     - backend
-  #   networks:
-  #     - app-network
+  frontend:
+    build:
+      context: ./frontend
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
+    volumes:
+      - ./frontend:/usr/src/app  # Mount frontend source code for HMR
+      - /usr/src/app/node_modules  # Exclude node_modules for the same reason as above
+    networks:
+      - app-network
   
 
 volumes:
