--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,11 +3,12 @@ FROM node:latest
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install
 
 COPY . .
 
-EXPOSE 5000
 
-CMD ["npm", "run", "dev"]
+EXPOSE 3001
+
+
+
+CMD ["sh", "install.sh"]
