--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.703.0",
+        "@aws-sdk/credential-providers": "^3.712.0",
         "@prisma/client": "^5.20.0",
+        "@types/aws-sdk": "^0.0.42",
+        "aws-sdk": "^2.1692.0",
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.3",
@@ -21,6 +25,7 @@
         "express": "^4.21.1",
         "jsonwebtoken": "^9.0.2",
         "mailgun.js": "^10.2.3",
+        "multer": "^1.4.5-lts.1",
         "node-mailjet": "^6.0.6",
         "nodemailer": "^6.9.15",
         "pg": "^8.13.0",
@@ -34,6 +39,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/jsonwebtoken": "^9.0.7",
+        "@types/multer": "^1.4.12",
         "@types/node": "^22.7.5",
         "@types/pg": "^8.11.10",
         "@types/web-push": "^3.6.3",
