--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,11 +2,7 @@
 FROM node:18
 
 # Set the working directory in the container
-WORKDIR /usr/src/app
-
-# Copy package.json and install dependencies
-COPY package*.json ./
-RUN npm install
+WORKDIR /app
 
 # Copy the rest of the application files
 COPY . .
@@ -14,5 +10,4 @@ COPY . .
 # Expose the port Nuxt listens on
 EXPOSE 3000
 
-# Start the application with development mode (which includes HMR)
-CMD ["npm", "run", "dev"]
+CMD ["sh", "install.sh"]
