--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,11 @@ services:
       - ./backend/.env
     depends_on:
       - db
+      - localstack
     ports:
       - "3001:3001"
     volumes:
-      - ./backend:/usr/src/app  # Mount backend source code for HMR
-      - /usr/src/app/node_modules  # Exclude node_modules to avoid issues with host dependencies
+      - ./backend:/app  # Mount backend source code for HMR
     networks:
       - app-network
 
@@ -40,8 +40,22 @@ services:
     depends_on:
       - backend
     volumes:
-      - ./frontend:/usr/src/app  # Mount frontend source code for HMR
-      - /usr/src/app/node_modules  # Exclude node_modules for the same reason as above
+      - ./frontend:/app  # Mount frontend source code for HMR
+    networks:
+      - app-network
+
+  localstack:
+    container_name: localstack
+    image: localstack/localstack:latest
+    ports:
+      - "4566:4566"            # LocalStack Gateway
+    environment:
+      # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
+      - DEBUG=${DEBUG:-0}
+      - AWS_REGION=us-east-1
+    volumes:
+      - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - app-network
   
