--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.703.0",
         "@aws-sdk/credential-providers": "^3.712.0",
+        "@aws-sdk/s3-request-presigner": "^3.712.0",
         "@prisma/client": "^5.20.0",
         "@types/aws-sdk": "^0.0.42",
         "aws-sdk": "^2.1692.0",
