--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
     "scripts": {
         "build": "tsc",
         "start": "node dist/index.js",
-        "dev": "nodemon --watch src --ext ts --exec ts-node --files src/index.ts"
+        "dev": "nodemon --watch src --ext ts --exec ts-node --files src/index.ts",
+        "reseed": "ts-node src/db/reseedDatabase.ts",
+        "seed": "ts-node src/db/seed.ts"
     },
     "keywords": [],
     "author": "",
@@ -18,7 +20,6 @@
         "@prisma/client": "^5.20.0",
         "@types/aws-sdk": "^0.0.42",
         "aws-sdk": "^2.1692.0",
-        "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.3",
         "cors": "^2.8.5",
@@ -35,7 +36,6 @@
         "web-push": "^3.6.7"
     },
     "devDependencies": {
-        "@types/bcrypt": "^5.0.2",
         "@types/bcryptjs": "^2.4.6",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
